[gd_scene load_steps=6 format=3 uid="uid://b60fa8vcjuoo6"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/dialogueNode.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dla76qr5vqp1r" path="res://addons/dialogue_nodes/icons/Character.svg" id="2_n0qww"]
[ext_resource type="Texture2D" uid="uid://dps8mwnnuc5nm" path="res://addons/dialogue_nodes/icons/DistractionFree.svg" id="4_tpc70"]
[ext_resource type="PackedScene" uid="uid://blp6ulybtwgcj" path="res://addons/dialogue_nodes/nodes/DialogueNodeOption.tscn" id="4_y6bt4"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_btpy8"]
number_color = Color(1, 1, 1, 1)
symbol_color = Color(1, 1, 1, 1)
function_color = Color(1, 1, 1, 1)
member_variable_color = Color(1, 1, 1, 1)
color_regions = {
"[ ]": Color(0.647059, 0.937255, 0.67451, 1)
}

[node name="DialogueNode" type="GraphNode" node_paths=PackedStringArray("resize_timer", "custom_speaker_timer", "dialogue_timer")]
custom_minimum_size = Vector2(300, 240)
theme_override_constants/separation = 4
resizable = true
title = "Dialogue"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1")
resize_timer = NodePath("DialogueContainer/ResizeTimer")
custom_speaker_timer = NodePath("SpeakerContainer/CustomSpeakerTimer")
dialogue_timer = NodePath("DialogueContainer/DialogueTimer")

[node name="SpeakerLabel" type="Label" parent="."]
layout_mode = 2
text = "Speaker"

[node name="SpeakerContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CustomSpeaker" type="LineEdit" parent="SpeakerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Speaker" type="OptionButton" parent="SpeakerContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="CharacterToggle" type="Button" parent="SpeakerContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("2_n0qww")

[node name="CustomSpeakerTimer" type="Timer" parent="SpeakerContainer"]
wait_time = 0.5
one_shot = true

[node name="DialogueLabel" type="Label" parent="."]
layout_mode = 2
text = "Dialogue"

[node name="DialogueContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Dialogue" type="TextEdit" parent="DialogueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1
syntax_highlighter = SubResource("CodeHighlighter_btpy8")
highlight_all_occurrences = true

[node name="ExpandButton" type="Button" parent="DialogueContainer"]
layout_mode = 2
icon = ExtResource("4_tpc70")

[node name="DialoguePanel" type="PopupPanel" parent="DialogueContainer"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(800, 600)

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueContainer/DialoguePanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueExpanded" type="TextEdit" parent="DialogueContainer/DialoguePanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 91)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1
syntax_highlighter = SubResource("CodeHighlighter_btpy8")
highlight_all_occurrences = true

[node name="CenterContainer" type="CenterContainer" parent="DialogueContainer/DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="DialogueContainer/DialoguePanel/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Close"

[node name="ResizeTimer" type="Timer" parent="DialogueContainer"]
wait_time = 0.5
one_shot = true

[node name="DialogueTimer" type="Timer" parent="DialogueContainer"]
wait_time = 0.5
one_shot = true

[node name="Option1" parent="." instance=ExtResource("4_y6bt4")]
layout_mode = 2

[connection signal="resize_request" from="." to="." method="_on_resize"]
[connection signal="text_changed" from="SpeakerContainer/CustomSpeaker" to="." method="_on_custom_speaker_changed"]
[connection signal="item_selected" from="SpeakerContainer/Speaker" to="." method="_on_speaker_selected"]
[connection signal="toggled" from="SpeakerContainer/CharacterToggle" to="." method="_on_speaker_toggled"]
[connection signal="timeout" from="SpeakerContainer/CustomSpeakerTimer" to="." method="_on_custom_speaker_timer_timeout"]
[connection signal="text_changed" from="DialogueContainer/Dialogue" to="." method="_on_dialogue_text_changed"]
[connection signal="pressed" from="DialogueContainer/ExpandButton" to="." method="_on_expand_button_pressed"]
[connection signal="text_changed" from="DialogueContainer/DialoguePanel/VBoxContainer/DialogueExpanded" to="." method="_on_dialogue_text_changed"]
[connection signal="pressed" from="DialogueContainer/DialoguePanel/VBoxContainer/CenterContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="DialogueContainer/ResizeTimer" to="." method="_on_resize_timer_timeout"]
[connection signal="timeout" from="DialogueContainer/DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
